# clusterk3s

./: Pipfile  hosts.yaml  pyproject.toml  raspberry.pub
ansible/: ansible.cfg  hosts.yaml  playbook.yaml  raspberry.pub
ansible/files/: log2ram.conf
ansible/files/facts/: tuned.fact
ansible/include/: tasks_common.yaml
ansible/roles/debian/tasks/: apt.yaml  mount.yaml  vim.yaml
ansible/roles/k3s/tasks/: install.yaml  main.yaml  master.yaml
ansible/roles/k3s/templates/: k3s-node.service.j2  k3s.service.j2
ansible/templates/: cmdline.txt.j2
flux/cluster/FOXHOUND/: weave-gitops-dashboard.yaml
flux/cluster/FOXHOUND/MetalLB/: config-patch.yaml  ipaddresspool.yaml  kustomization.yaml
flux/cluster/FOXHOUND/flux-system/: gotk-sync.yaml
flux/cluster/FOXHOUND/nfs-provisioner/: config-patch.yaml  kustomization.yaml
flux/modules/MetalLB/: kustomization.yaml  release.yaml  repository.yaml
flux/modules/nfs-provisioner/: kustomization.yaml  release.yaml  repository.yaml
include/: pre_tasks.yaml  tasks_common.yaml
roles/debian/handlers/: main.yaml
roles/debian/tasks/: apt.yaml  main.yaml
roles/debian/vars/: main.yaml
roles/k3s/tasks/: install.yaml  main.yaml  master.yaml  nodes.yaml  prereq.yaml
templates/: fstab.j2
