[tool.poetry]
name = "clusterk3s"
version = "0.1.0"
description = ""
authors = ["Daniel Theodoro <daniel.theodoro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "*"
ansible-lint = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
